basic setup add basic db context

--- a/MinimalApiBlog/appsettings.Development.json
+++ b/MinimalApiBlog/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "ConnectionStrings": {
+    "BlogDBConnectionString": "Data Source=Blog.db"
+  },
+  "AllowedHosts": "*"
 }
